src/generated/iam/v1/README.md
# Google Cloud Client Libraries for Rust - IAM Meta API

<!-- Code generated by sidekick. DO NOT EDIT. -->

Manages access control for Google Cloud Platform resources.

The client library types and functions are stable and not expected to change.
Please note that Google Cloud services do change from time to time. The client
libraries are designed to preserve backwards compatibility when the service
changes in compatible ways. For example, adding RPCs, or fields to messages
should not introduce breaking changes to the client libraries.

## Quickstart

The main types to work with this crate are the clients:

- [IAMPolicy]

## Features

- `default-rustls-provider`: enabled by default. Use the default rustls crypto
  provider ([ring]) for TLS and authentication. Applications with specific
  requirements for cryptography (such as exclusively using the [aws-lc-rs], or
  [ring] crates) should disable this default and install the default crypto
  provider in `rustls` to fit their requirements.

## More Information

- Read the [crate's documentation](https://docs.rs/google-cloud-iam-v1/1.3.0)

[IAMPolicy]: https://docs.rs/google-cloud-iam-v1/1.3.0/google_cloud_iam_v1/client/struct.IAMPolicy.html

[aws-lc-rs]: https://crates.io/crates/aws-lc-rs
[ring]: https://crates.io/crates/ring
