src/generated/iam/v3/README.md
# Google Cloud Client Libraries for Rust - Identity and Access Management (IAM) API

<!-- Code generated by sidekick. DO NOT EDIT. -->

Manages identity and access control for Google Cloud resources, including
the creation of service accounts, which you can use to authenticate to
Google and make API calls. Enabling this API also enables the IAM Service
Account Credentials API (iamcredentials.googleapis.com). However,
disabling this API doesn't disable the IAM Service Account Credentials
API.

The client library types and functions are stable and not expected to change.
Please note that Google Cloud services do change from time to time. The client
libraries are designed to preserve backwards compatibility when the service
changes in compatible ways. For example, adding RPCs, or fields to messages
should not introduce breaking changes to the client libraries.

## Quickstart

The main types to work with this crate are the clients:

- [AccessPolicies]
- [PolicyBindings]
- [PrincipalAccessBoundaryPolicies]

## Features

- `default-rustls-provider`: enabled by default. Use the default rustls crypto
  provider ([aws-lc-rs]) for TLS and authentication. Applications with specific
  requirements for cryptography (such as exclusively using the [ring] crate)
  should disable this default and call
  `rustls::crypto::CryptoProvider::install_default()`.

## More Information

- Read the [crate's documentation](https://docs.rs/google-cloud-iam-v3/1.14.0)

[aws-lc-rs]: https://crates.io/crates/aws-lc-rs
[ring]: https://crates.io/crates/ring
[AccessPolicies]: https://docs.rs/google-cloud-iam-v3/1.14.0/google_cloud_iam_v3/client/struct.AccessPolicies.html
[PolicyBindings]: https://docs.rs/google-cloud-iam-v3/1.14.0/google_cloud_iam_v3/client/struct.PolicyBindings.html
[PrincipalAccessBoundaryPolicies]: https://docs.rs/google-cloud-iam-v3/1.14.0/google_cloud_iam_v3/client/struct.PrincipalAccessBoundaryPolicies.html
